--- a/index.html
+++ b/index.html
@@ -2,18 +2,15 @@
 <html lang="en">
     <head>
         <meta charset="UTF-8" />
-        <link rel="icon" href="/svelte-terrain-generator/favicon.ico" />
+        <link rel="icon" href="favicon.ico" />
         <meta name="viewport" content="width=device-width, initial-scale=1.0" />
         <title>Svelte Terrain Generator</title>
         <script
             type="module"
             crossorigin
-            src="/svelte-terrain-generator/assets/index.3e14066a.js"
+            src="assets/index.627015fa.js"
         ></script>
-        <link
-            rel="stylesheet"
-            href="/svelte-terrain-generator/assets/index.804950b5.css"
-        />
+        <link rel="stylesheet" href="assets/index.804950b5.css" />
     </head>
     <body>
         <div id="app"></div>
